--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "devDependencies": {
     "babel-core": "^5.8.23",
     "babel-loader": "^5.3.2",
+    "react-hot-loader": "^1.3.0",
     "webpack": "^1.12.0",
     "webpack-dev-server": "^1.10.1"
+  },
+  "dependencies": {
+    "react": "^0.13.3"
   }
 }
