--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js 'test/**/*.@(js|jsx)'"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +12,9 @@
     "babel-core": "^5.8.23",
     "babel-loader": "^5.3.2",
     "react-hot-loader": "^1.3.0",
+    "chai": "^3.2.0",
+    "jsdom": "^3.1.2",
+    "mocha": "^2.3.0",
     "webpack": "^1.12.0",
     "webpack-dev-server": "^1.10.1"
   },
