--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^0.13.3",
     "react-redux": "^2.1.0",
     "react-router": "^0.13.3",
-    "redux": "^2.0.0"
+    "redux": "^2.0.0",
+    "socket.io-client": "^1.3.6"
   }
 }
