--- a/package.json
+++ b/package.json
@@ -9,17 +9,21 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer-loader": "^2.1.0",
     "babel-core": "^5.8.23",
     "babel-loader": "^5.3.2",
     "chai": "^3.2.0",
     "chai-immutable": "^1.3.0",
+    "css-loader": "^0.17.0",
     "jsdom": "^3.1.2",
     "mocha": "^2.3.0",
     "react-hot-loader": "^1.3.0",
+    "style-loader": "^0.12.3",
     "webpack": "^1.12.0",
     "webpack-dev-server": "^1.10.1"
   },
   "dependencies": {
+    "classnames": "^2.1.3",
     "immutable": "^3.7.5",
     "react": "^0.13.3",
     "react-redux": "^2.1.0",
