--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
   "dependencies": {
     "classnames": "^2.1.3",
     "immutable": "^3.7.5",
+    "object-assign": "^4.0.1",
     "react": "^0.13.3",
     "react-redux": "^2.1.0",
     "react-router": "^0.13.3",
     "redux": "^2.0.0",
-    "socket.io-client": "^1.3.6"
+    "socket.io-client": "^1.3.6",
+    "uuid": "^2.0.1"
   }
 }
