--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "css-loader": "^0.17.0",
     "jsdom": "^6.5.1",
     "mocha": "^2.3.0",
+    "react-dom": "^0.14.3",
     "react-hot-loader": "^1.3.0",
     "style-loader": "^0.12.3",
     "webpack": "^1.12.0",
